Fixed spacing on splashpage

--- a/portfolio.css
+++ b/portfolio.css
@@ -29,7 +29,7 @@
     height: auto;
     width: 50%;
     position: absolute;
-    top: 40%;
+    top: 7em;
     right: 25%;
     border: 1px solid #EEE0CB;
 }
